[package]
name = "dioxus_ui_labs"
version = "0.1.0"
authors = ["Max Wells <maxwells.pro@proton.me>"]
edition = "2024"


[dependencies]
dioxus = { version = "0.6", features = ["router"] }
tw_merge = { version = "0.1", features = ["variant", "debug"] }
dioxus_ui = { path = "crates/dioxus_ui" }


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
