[package]
name = "rust_ui_labs"
version = "0.1.0"
description = "Labs for Rust/UI"
edition = "2024"

[workspace]

[features]
default = []
tauri = []

[lib]
name = "rust_ui_labs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
