[package]
name = "leptos_ui"
version = "0.1.5"
edition = "2024"
authors = ["Everlabs"]
description = "Build modular UI components in just 1 line. Tailored for the Leptos framework."
keywords = ["leptos", "ui", "tailwind", "css", "clx"]
license = "MIT"
readme = "./README.md"

[dependencies]
leptos = { version = "0.7", features = ["nightly"] }
tw_merge = { version = "0.1.5" }
